# video-compress

./: .gitignore  Makefile  README.org  pyproject.toml
.github/workflows/: ci.yml  release.yml
vc/: __init__.py  main.py  util.py
